--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>酷玩家网站</title>
+<title>酷玩家网站1</title>
 
 <!-- 1440*4127 -->
 <link rel="stylesheet" href="css/normalize.css">
