--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -5,9 +5,8 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>酷玩家网站1</title>
+<title>酷玩家网站</title>
 
-<!-- 1440*4127 -->
 <link rel="stylesheet" href="css/normalize.css">
 <!-- bootstrap样式 -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
