--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -454,8 +454,8 @@
 </div>
 </div>
 </section>
-<!-- data-stellar-background-ratio="0.5"  -->
-<section id="contact" class="clean-section-wrapper clean-contact-section background-one lan_Get_in_Touch-background">
+<!-- data-stellar-background-ratio="0.5" clean-contact-section -->
+<section id="contact" class="clean-section-wrapper  background-one lan_Get_in_Touch-background">
 <div class="clean-parallax-overlay"></div>
 <div class="container">
 <div class="row">
