--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -49,7 +49,8 @@
 		<li><a href="#WHERE_TO_BUY">WHERE TO BUY</a></li>
 	</url>
 	<div class="nav_search">
-		<input type="text" name="" id="" value="" placeholder="Search" />
+		<!-- <input type="text" name="" id="" value="" placeholder="Search" /> -->
+		<div class="rich" contenteditable="true" data-placeholder="Search" ></div>
 		<img src="./images/search_icon.png" alt="search_img" style="">
 	</div>
 </nav>
