--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -124,30 +124,33 @@
 
 </header>
 <!-- 轮播图 -->
-<section class="slider-pro clean-slider" id="clean-slider">
+<section class="slider-pro clean-slider" id="clean-slider" style="z-index: 1;">
 <div class="sp-slides">
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
-		<div class="sp-image"></div>
+		<!-- <div class="sp-image"></div> -->
+		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
 		<!-- src="images/slider/1.png" alt="Slider 1" -->
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
-		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 2"/> -->
-		<div class="sp-image"></div>
+		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
+		<!-- <div class="sp-image"></div> -->
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
+		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
 		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 3"/> -->
-		<div class="sp-image"></div>
+		<!-- <div class="sp-image"></div> -->
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
 		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 4"/> -->
-		<div class="sp-image"></div>
+		<!-- <div class="sp-image"></div> -->
+		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
 	</div>
 <!-- 轮播图结束 -->
 </div>
