--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -128,29 +128,26 @@
 <div class="sp-slides">
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
-		<!-- <div class="sp-image"></div> -->
-		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
+		<div class="sp-image"></div>
 		<!-- src="images/slider/1.png" alt="Slider 1" -->
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
-		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
-		<!-- <div class="sp-image"></div> -->
+		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 2"/> -->
+		<div class="sp-image"></div>
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
-		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
 		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 3"/> -->
-		<!-- <div class="sp-image"></div> -->
+		<div class="sp-image"></div>
 	</div>
 	
 	<div class="sp-slide clean-main-slides">
 		<div class="clean-img-overlay"></div>
 		<!-- <img class="sp-image" src="images/slider/1.png" alt="Slider 4"/> -->
-		<!-- <div class="sp-image"></div> -->
-		<img class="sp-image" src="images/slider/1.png" alt="Slider 2"/>
+		<div class="sp-image"></div>
 	</div>
 <!-- 轮播图结束 -->
 </div>
@@ -177,7 +174,7 @@
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
 				<div class="clean-portfolio-work-item_lan lan-center" >
-					<img src="images/featured-work/G400-银色-rgb.png" alt="Feature Work 1" >
+					<img src="images/featured-work/G400.png" alt="Feature Work 1" >
 					<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
 						 <p class="lan_featured_font">G400</p>
 						 <p class="clean-client-info lan_featured_font_x">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
@@ -204,7 +201,7 @@
 			</div>
 			<div class="swiper-slide">
 				<div class="clean-portfolio-work-item_lan lan-center" >
-					<img src="images/featured-work/G400-银色-rgb.png" alt="Feature Work 1" >
+					<img src="images/featured-work/G400.png" alt="Feature Work 1" >
 					<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
 						 <p class="lan_featured_font">G400</p>
 						 <p class="clean-client-info lan_featured_font_x">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
@@ -230,7 +227,7 @@
 <div id="featured-work-slider" class="owl-carousel clean-portfolio-works-slider">
 
 <div class="clean-portfolio-work-item lan-center" >
-	<img src="images/featured-work/G400-银色-rgb.png" alt="Feature Work 1" >
+	<img src="images/featured-work/G400.png" alt="Feature Work 1" >
 	<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
 		 <p class="lan_featured_font">G400</p>
 		 <p class="clean-client-info lan_featured_font_x">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
@@ -257,7 +254,7 @@
 
 
 <div class="clean-portfolio-work-item lan-center">
-	<img src="images/featured-work/G400-银色-rgb.png" alt="Feature Work 4">
+	<img src="images/featured-work/G400.png" alt="Feature Work 4">
 	<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
 		 <p >G400</p>
 		 <p class="clean-client-info">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
@@ -291,7 +288,7 @@
 <div class="clean-what-we-do lan-center iphone_state_on">
 <div class="col-md-3 col-sm-3 col-xs-12 clean-blurb-round-icon wow bounceIn" data-wow-delay=".5s">
 	<div class="clean-portfolio-work-item lan-center" >
-		<img src="images/featured-work/G400-银色-rgb.png" alt="Feature Work 1" >
+		<img src="images/featured-work/G400.png" alt="Feature Work 1" >
 		<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
 			 <p class="lan_featured_font">G400</p>
 			 <p class="clean-client-info lan_featured_font_x">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
@@ -506,7 +503,7 @@ Sorry, don't know what happened. Try later :(
 </div>
 
 <div class="contact-info col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1 wow foot_style" >
-	<span class="Dongguan"><img src="images/Get_in_Touch-地址.png" style="background-size: 100% 100%;" alt="">&nbsp Dongguan Zhimei Electronic Technology Co., Ltd. &nbsp&nbsp&nbsp</span>
+	<span class="Dongguan"><img src="images/Get_in_Touch.png" style="background-size: 100% 100%;" alt="">&nbsp Dongguan Zhimei Electronic Technology Co., Ltd. &nbsp&nbsp&nbsp</span>
 	<span class="Email"><img src="./images/Email.png" style="background-size: 100% 100%;" alt="">&nbsp Email: vivian@coldplayer.com.cn &nbsp&nbsp&nbsp</span>	
 	<span class="lan_fa_lg"><i class="fa fa-phone fa-lg"></i>&nbsp Phone: 0755-21014523</span>
 </div>
