--- a/oneweb/index.html
+++ b/oneweb/index.html
@@ -165,7 +165,7 @@
 </div>
 
 <!-- swiper轮播放大 -->
-<div class="col-md-12 col-sm-12 col-xs-12 container-fluid iphone_state_off">
+<div class="col-md-12 col-sm-12 col-xs-12 container-fluid iphone_state_off" style="z-index: 1;">
 <div class="row-fluid" style="width: 100%;">
 <div class="clean-portfolio-work-slider-section wow fadeIn" data-wow-duration="2s" style="width: 100%;">	
 	
@@ -199,7 +199,7 @@
 					</div>	
 				</div>
 			</div>
-			<div class="swiper-slide">
+<!-- 			<div class="swiper-slide">
 				<div class="clean-portfolio-work-item_lan lan-center" >
 					<img src="images/featured-work/G400.png" alt="Feature Work 1" >
 					<div class="clean-testimonial-slides col-md-10 col-sm-10 col-xs-12 col-md-offset-1 col-sm-offset-1">
@@ -207,7 +207,7 @@
 						 <p class="clean-client-info lan_featured_font_x">Premium LED-illuminated gaming laptop cooling stand with 5fans</p>
 					</div>
 				</div>
-			</div>									
+			</div>	 -->								
 		</div>
 		<div class="swiper-button-prev"></div>
 		<div class="swiper-button-next"></div>	
@@ -380,7 +380,7 @@
 
 </section>
 
-<section id="WHERE_TO_BUY" class="clean-testimonial-section">
+<section id="WHERE_TO_BUY" class="clean-testimonial-section" style="z-index: 1;">
 <div class="container">
 <div class="row">
 
